fix: Major stability fixes

--- a/Dependencies/DanaKit/Localization/da.lproj/Localizable.strings
+++ b/Dependencies/DanaKit/Localization/da.lproj/Localizable.strings
@@ -405,3 +405,6 @@
 
 /* Text for cannula age */
 "Cannula age" = "Kanyle alder"
+
+/* Text for reservoir age */
+"Reservoir age" = "Reservoarets alder"
