--- a/Dependencies/DanaKit/Localization/fr.lproj/Localizable.strings
+++ b/Dependencies/DanaKit/Localization/fr.lproj/Localizable.strings
@@ -405,3 +405,6 @@
 
 /* Text for cannula age */
 "Cannula age" = "Âge de la canule"
+
+/* Text for reservoir age */
+"Reservoir age" = "Âge du réservoir"
