--- a/Dependencies/DanaKit/Localization/pt-BR.lproj/Localizable.strings
+++ b/Dependencies/DanaKit/Localization/pt-BR.lproj/Localizable.strings
@@ -405,3 +405,6 @@
 
 /* Text for cannula age */
 "Cannula age" = "Idade da cânula"
+
+/* Text for reservoir age */
+"Reservoir age" = "Idade do reservatório"
