--- a/Dependencies/DanaKit/Localization/nl.lproj/Localizable.strings
+++ b/Dependencies/DanaKit/Localization/nl.lproj/Localizable.strings
@@ -405,3 +405,6 @@
 
 /* Text for cannula age */
 "Cannula age" = "Canule leeftijd"
+
+/* Text for reservoir age */
+"Reservoir age" = "Reservoir leeftijd"
