--- a/Dependencies/DanaKit/Localization/ro.lproj/Localizable.strings
+++ b/Dependencies/DanaKit/Localization/ro.lproj/Localizable.strings
@@ -405,3 +405,6 @@
 
 /* Text for cannula age */
 "Cannula age" = "Vârsta canulei"
+
+/* Text for reservoir age */
+"Reservoir age" = "Vârsta rezervorului"
