--- a/Dependencies/DanaKit/Localization/ru.lproj/Localizable.strings
+++ b/Dependencies/DanaKit/Localization/ru.lproj/Localizable.strings
@@ -405,3 +405,6 @@
 
 /* Text for cannula age */
 "Cannula age" = "Возраст канюли"
+
+/* Text for reservoir age */
+"Reservoir age" = "Возраст резервуара"
