--- a/Dependencies/DanaKit/Localization/vi.lproj/Localizable.strings
+++ b/Dependencies/DanaKit/Localization/vi.lproj/Localizable.strings
@@ -405,3 +405,6 @@
 
 /* Text for cannula age */
 "Cannula age" = "Tuổi ống thông"
+
+/* Text for reservoir age */
+"Reservoir age" = "Tuổi hồ chứa"
